Chat command fixes and changes
- reworked `//invasion` and renamed to `//vortexraid`
- removed `//addemotion` (was outdated and accepted wrong ids) > use `//add <emotion card item>`
- added support for emotion cards in `.preview`
- fixed `.preview` didn't accept dye items if they were the only parameter
- fixed `.preview` didn't show the correct color item link
- fixed `.preview` didn't show off-hand weapons or shields when there was a one-handed weapon in the main hand
- `.preview` now also accepts items separated by spaces or equipment and colors without a separator in between