@@ -9,19 +9,19 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledFuture;
 
 import com.aionemu.gameserver.dataholders.DataManager;
-import com.aionemu.gameserver.model.Gender;
+import com.aionemu.gameserver.model.EmotionType;
 import com.aionemu.gameserver.model.gameobjects.Item;
 import com.aionemu.gameserver.model.gameobjects.player.Player;
+import com.aionemu.gameserver.model.gameobjects.state.CreatureState;
 import com.aionemu.gameserver.model.items.ItemSlot;
 import com.aionemu.gameserver.model.templates.item.ItemTemplate;
+import com.aionemu.gameserver.model.templates.item.actions.AbstractItemAction;
+import com.aionemu.gameserver.model.templates.item.actions.EmotionLearnAction;
 import com.aionemu.gameserver.model.templates.item.enums.EquipType;
 import com.aionemu.gameserver.model.templates.item.enums.ItemGroup;
 import com.aionemu.gameserver.model.templates.itemset.ItemPart;
 import com.aionemu.gameserver.model.templates.itemset.ItemSetTemplate;
-import com.aionemu.gameserver.network.aion.serverpackets.SM_CUSTOM_SETTINGS;
-import com.aionemu.gameserver.network.aion.serverpackets.SM_RIDE_ROBOT;
-import com.aionemu.gameserver.network.aion.serverpackets.SM_SYSTEM_MESSAGE;
-import com.aionemu.gameserver.network.aion.serverpackets.SM_UPDATE_PLAYER_APPEARANCE;
+import com.aionemu.gameserver.network.aion.serverpackets.*;
 import com.aionemu.gameserver.utils.ChatUtil;
 import com.aionemu.gameserver.utils.PacketSendUtility;
 import com.aionemu.gameserver.utils.ThreadPoolManager;
@@ -36,13 +36,14 @@ public class Preview extends PlayerCommand {
 	private static final int PREVIEW_TIME_SECONDS = 10;
 
 	public Preview() {
-		super("preview", "Previews equipment.");
+		super("preview", "Previews equipment and emotion cards.");
 
 		// @formatter:off
 		setSyntaxInfo(
+			"<emotion card item> - Previews the emotion.",
 			"<color> - Previews your equipped items in the specified color (dye item, color name or color HEX code).",
-			"<item(s)> [color] - Previews the specified item(s) on your character (default: standard item color, optional: dye item, color name or color HEX code).",
-			"Multiple items may be separated with commas, but not with spaces.",
+			"<item(s)> [color] - Previews the specified equipment on your character (default: standard item color, optional: dye item, color name or color HEX code).",
+			"Multiple items can be separated by commas or spaces.",
 			"If a single item is given and it's a part of an item set, you will get a preview of the whole item set."
 		);
 		// @formatter:on
@@ -50,72 +51,67 @@ public class Preview extends PlayerCommand {
 
 	@Override
 	public void execute(Player player, String... params) {
-		if (player.getLevel() < 10) {
-			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_CHANGE_ITEM_SKIN_PC_LEVEL_LIMIT());
-			return;
-		}
-
 		if (params.length == 0) {
 			sendInfo(player);
 			return;
 		}
 
-		int i = 0;
-		boolean onlyColor = params.length == 1 && !params[0].contains("[") && !params[0].matches("([1-9][0-9]{8},?)+");
-		List<ItemTemplate> items = new ArrayList<>();
-		if (onlyColor)
-			player.getEquipment().getEquippedForAppearance().forEach(item -> items.add(item.getItemTemplate()));
-		else if (!parseItems(player, params[i++], items))
-			return;
+		List<ItemParam> itemParams = parse(params);
+		if (!previewEmotion(player, itemParams.getFirst()))
+			previewEquipment(player, itemParams);
+	}
 
-		Integer itemColor = null; // null = default item color
-		String colorText = "default";
-		if (params.length > i) {
-			// try to get itemId of a dyeing item
-			String colorParam = params[i];
-			itemColor = ChatUtil.getItemId(colorParam);
-			ItemTemplate dyeItemTemplate = DataManager.ITEM_DATA.getItemTemplate(itemColor);
-
-			if (itemColor != 0 && dyeItemTemplate != null && dyeItemTemplate.getActions() != null && dyeItemTemplate.getActions().getDyeAction() != null) {
-				// itemColor is a dyeing item ID
-				itemColor = dyeItemTemplate.getActions().getDyeAction().getColor();
-				colorText = ChatUtil.item(itemColor);
-			} else {
-				try {
-					try {
-						// try to get color by name
-						itemColor = ((Color) Class.forName("java.awt.Color").getField(colorParam.toUpperCase()).get(null)).getRGB();
-					} catch (Exception e) {
-						// try to get color by hex code
-						if (colorParam.length() <= 8) {
-							if (colorParam.startsWith("#"))
-								colorParam = colorParam.substring(1);
-							else if (colorParam.startsWith("0x") || colorParam.startsWith("0X"))
-								colorParam = colorParam.substring(2);
-						}
-						itemColor = Integer.valueOf(colorParam, 16);
-					}
-					colorText = ChatUtil.color("#" + String.format("%06X", itemColor & 0xFFFFFF), itemColor);
-				} catch (NumberFormatException e) {
-					sendInfo(player, colorParam + " is not a valid color.");
-					return;
+	private boolean previewEmotion(Player player, ItemParam itemParam) {
+		if (itemParam.itemTemplate == null || itemParam.itemTemplate.getActions() == null)
+			return false;
+		for (AbstractItemAction itemAction : itemParam.itemTemplate.getActions().getItemActions()) {
+			if (itemAction instanceof EmotionLearnAction emotionLearnAction) {
+				if ((player.getState() & ~CreatureState.POWERSHARD.getId()) > CreatureState.ACTIVE.getId()) { // prevent bugged animations
+					PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_SKILL_CAN_NOT_CAST_IN_CURRENT_STANCE());
+				} else {
+					int targetObjectId = player.getTarget() != null ? player.getTarget().getObjectId() : 0;
+					PacketSendUtility.sendPacket(player, new SM_EMOTION(player, EmotionType.EMOTE_END));
+					PacketSendUtility.sendPacket(player, new SM_EMOTION(player, EmotionType.EMOTE, emotionLearnAction.getEmotionId(), targetObjectId));
 				}
-			}
-			if (items.stream().noneMatch(ItemTemplate::isItemDyePermitted)) {
-				PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_ITEM_COLOR_CHANGE_ERROR_CANNOTDYE(items.get(0).getL10n()));
-				return;
+				return true;
 			}
 		}
+		return false;
+	}
 
+	private void previewEquipment(Player player, List<ItemParam> itemParams) {
+		Integer itemColor = null; // null = default item color
+		String colorText = "default";
+		for (ItemParam itemParam : itemParams) {
+			itemColor = itemParam.dyeColor();
+			if (itemColor != null) {
+				if (itemParam.itemTemplate == null)
+					colorText = ChatUtil.color("#" + String.format("%06X", itemColor & 0xFFFFFF), itemColor);
+				else
+					colorText = ChatUtil.item(itemParam.itemTemplate.getTemplateId());
+				itemParams.remove(itemParam);
+				break;
+			}
+		}
+		previewEquipment(player, itemParams.stream().map(ItemParam::itemTemplate).toList(), itemColor, colorText);
+	}
+
+	private void previewEquipment(Player player, List<ItemTemplate> equipment, Integer itemColor, String colorText) {
+		if (!equipment.stream().allMatch(itemTemplate -> validateForPreview(player, itemTemplate)))
+			return;
+		if (itemColor != null && !equipment.isEmpty() && equipment.stream().noneMatch(ItemTemplate::isItemDyePermitted)) {
+			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_ITEM_COLOR_CHANGE_ERROR_CANNOTDYE(equipment.getFirst().getL10n()));
+			return;
+		}
 		String itemNames = "";
 		long previewItemsSlotMask = 0;
 		List<Item> previewItems = new ArrayList<>();
-		if (items.size() == 1 && items.get(0).isItemSet()) { // preview whole set
-			ItemSetTemplate itemSet = items.get(0).getItemSet();
+		if (equipment.size() == 1 && equipment.getFirst().isItemSet()) { // preview whole set
+			ItemSetTemplate itemSet = equipment.getFirst().getItemSet();
 			for (ItemPart part : itemSet.getItempart())
 				previewItemsSlotMask |= addFakeItem(previewItems, previewItemsSlotMask, part.getItemId(), itemColor);
 		} else {
-			for (ItemTemplate template : items)
+			for (ItemTemplate template : equipment)
 				previewItemsSlotMask |= addFakeItem(previewItems, previewItemsSlotMask, template.getTemplateId(), itemColor);
 		}
 		int previewRobotId = 0;
@@ -125,7 +121,7 @@ public class Preview extends PlayerCommand {
 				previewRobotId = previewItem.getItemTemplate().getRobotId();
 		}
 
-		addOwnEquipment(player, previewItems, previewItemsSlotMask);
+		addOwnEquipment(player, previewItems, previewItemsSlotMask, itemColor);
 		previewItems.sort(Comparator.comparingLong(Item::getEquipmentSlot)); // order by equipment slot ids (ascending) to avoid display bugs
 		int display = player.getPlayerSettings().getDisplay() | SM_CUSTOM_SETTINGS.HIDE_LEGION_CLOAK;
 		if (previewItems.stream().anyMatch(item -> item.getEquipmentSlot() == ItemSlot.HELMET.getSlotIdMask())) {
@@ -142,47 +138,41 @@ public class Preview extends PlayerCommand {
 			updateRobotAppearance(player, previewRobotId);
 		}
 		schedulePreviewReset(player, PREVIEW_TIME_SECONDS + switchRobotAnimationSeconds, previewRobotId != 0);
-		if (onlyColor)
+		if (equipment.isEmpty())
 			sendInfo(player, "Previewing your equipment for " + PREVIEW_TIME_SECONDS + " seconds in color " + colorText);
 		else
 			sendInfo(player, "Previewing the following items for " + PREVIEW_TIME_SECONDS + " seconds (color: " + colorText + "):" + itemNames);
 	}
 
-	private boolean parseItems(Player player, String param, List<ItemTemplate> items) {
-		String[] ids = param.split(",|(?<=[^,])(?=\\[)|(?<=[\\]])(?=[^\\[])"); // split on , and between item tags (square brackets)
-		for (String id : ids) {
-			int itemId = ChatUtil.getItemId(id);
-			if (itemId == 0) {
-				sendInfo(player, "Invalid item specified.");
-				return false;
-			}
-
-			ItemTemplate itemTemplate = DataManager.ITEM_DATA.getItemTemplate(itemId);
-			if (itemTemplate == null) {
-				PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_CHANGE_ITEM_SKIN_NO_TARGET_ITEM());
-				return false;
-			} else if (itemTemplate.getEquipmentType() == EquipType.NONE) {
-				PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_CHANGE_ITEM_SKIN_PREVIEW_INVALID_COSMETIC());
-				return false;
-			} else if (itemTemplate.getRace() == player.getOppositeRace()) {
-				PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_PREVIEW_INVALID_RACE());
-				return false;
-			} else {
-				Gender itemGender = itemTemplate.getUseLimits().getGenderPermitted();
-				if (itemGender != null && itemGender != player.getGender()) {
-					PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_PREVIEW_INVALID_GENDER());
-					return false;
-				}
-			}
-
-			if (!ItemSlot.isVisible(itemTemplate.getItemSlot())) {
-				sendInfo(player, "Item is no visible equipment.");
-				return false;
-			}
-
-			items.add(itemTemplate);
+	private boolean validateForPreview(Player player, ItemTemplate itemTemplate) {
+		if (itemTemplate == null) {
+			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_CHANGE_ITEM_SKIN_NO_TARGET_ITEM());
+			return false;
+		} else if (itemTemplate.getEquipmentType() == EquipType.NONE) {
+			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_CHANGE_ITEM_SKIN_PREVIEW_INVALID_COSMETIC());
+			return false;
+		} else if (itemTemplate.getRace() == player.getOppositeRace()) {
+			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_PREVIEW_INVALID_RACE());
+			return false;
+		} else if (itemTemplate.getUseLimits().getGenderPermitted() != null && itemTemplate.getUseLimits().getGenderPermitted() != player.getGender()) {
+			PacketSendUtility.sendPacket(player, SM_SYSTEM_MESSAGE.STR_MSG_PREVIEW_INVALID_GENDER());
+			return false;
+		} else if (!ItemSlot.isVisible(itemTemplate.getItemSlot())) {
+			sendInfo(player, itemTemplate.getL10n() + " is no visible equipment.");
+			return false;
 		}
 		return true;
+	}
+
+	private List<ItemParam> parse(String[] params) {
+		List<ItemParam> itemParams = new ArrayList<>();
+		for (String param : params) {
+			String[] ids = param.split(",|(?<=[^,])(?=\\[)|(?<=[\\]])(?=[^\\[])"); // split on comma and between item tags (square brackets)
+			for (String id : ids) {
+				itemParams.add(new ItemParam(id, DataManager.ITEM_DATA.getItemTemplate(ChatUtil.getItemId(id))));
+			}
+		}
+		return itemParams;
 	}
 
 	/**
@@ -196,12 +186,10 @@ public class Preview extends PlayerCommand {
 		long occupiedSlots = previewItemsSlotMask & itemSlotMask;
 		if (occupiedSlots == itemSlotMask) // an item of that kind is already present in the list
 			return 0;
-		if (itemSlotMask == ItemSlot.EARRING_RIGHT_OR_LEFT.getSlotIdMask()) {
-			if (occupiedSlots == 0)
-				itemSlotMask = ItemSlot.EARRINGS_LEFT.getSlotIdMask();
-			else if (occupiedSlots == ItemSlot.EARRINGS_LEFT.getSlotIdMask())
-				itemSlotMask = ItemSlot.EARRINGS_RIGHT.getSlotIdMask();
-		}
+		if (itemTemplate.isTwoHandWeapon() && occupiedSlots != 0) // only allow two-handed if both hands are free
+			return 0;
+		if (!itemTemplate.isTwoHandWeapon())
+			itemSlotMask = getFirstFreeSlot(itemSlotMask, occupiedSlots); // select the correct slot for CL_MULTISLOT, weapons, earrings and power shards
 		Item previewItem = new Item(0, itemTemplate, 1, true, itemSlotMask); // ObjId 0 to avoid allocating new IDFactory IDs (it'll not be used anywhere)
 		if (itemTemplate.isItemDyePermitted())
 			previewItem.setItemColor(itemColor);
@@ -209,22 +197,22 @@ public class Preview extends PlayerCommand {
 		return itemSlotMask;
 	}
 
-	private static void addOwnEquipment(Player player, List<Item> previewItems, long previewItemsSlotMask) {
-		boolean previewTwoHanded = false;
-		for (Item visibleEquipment : player.getEquipment().getEquippedForAppearance()) {
-			if (previewTwoHanded || ItemSlot.isTwoHandedWeapon(visibleEquipment.getEquipmentSlot())) {
-				previewTwoHanded = true;
-				if (visibleEquipment.getEquipmentSlot() == ItemSlot.SUB_HAND.getSlotIdMask())
-					continue; // don't add players shield or sub hand weapon if previewing TwoHanded
-			}
+	private static long getFirstFreeSlot(long targetSlots, long occupiedSlots) {
+		long freeSlots = targetSlots & ~occupiedSlots;
+		return Long.lowestOneBit(freeSlots);
+	}
 
-			if ((visibleEquipment.getEquipmentSlot() & previewItemsSlotMask) == 0) // add rest of players equipment
-				previewItems.add(visibleEquipment);
+	private static void addOwnEquipment(Player player, List<Item> previewItems, long previewItemsSlotMask, Integer itemColor) {
+		boolean previewContainsMainHandWeapon = (previewItemsSlotMask & ItemSlot.MAIN_HAND.getSlotIdMask()) != 0;
+		for (Item visibleEquipment : player.getEquipment().getEquippedForAppearance()) {
+			if (previewContainsMainHandWeapon && visibleEquipment.getItemTemplate().isOneHandWeapon())
+				continue; // don't show own weapon in off-hand if player wants to preview a specific weapon
+			previewItemsSlotMask |= addFakeItem(previewItems, previewItemsSlotMask, visibleEquipment.getItemId(), itemColor);
 		}
 	}
 
 	private static void schedulePreviewReset(Player player, int duration, boolean previewRobot) {
-		PREVIEW_RESETS.compute(player.getObjectId(), (k, resetTask) -> {
+		PREVIEW_RESETS.compute(player.getObjectId(), (_, resetTask) -> {
 			if (resetTask != null) { // cancel previous scheduled preview reset thread
 				if (!previewRobot && player.isInRobotMode()) // restore robot appearance in case it was previewed just a few seconds ago
 					updateRobotAppearance(player, player.getRobotId());
@@ -237,7 +225,7 @@ public class Preview extends PlayerCommand {
 					updateRobotAppearance(player, player.getRobotId());
 				PacketSendUtility.sendMessage(player, "Preview time ended.");
 				PREVIEW_RESETS.remove(player.getObjectId());
-			}, duration * 1000);
+			}, duration * 1000L);
 			return resetTask;
 		});
 	}
@@ -245,5 +233,34 @@ public class Preview extends PlayerCommand {
 	private static void updateRobotAppearance(Player player, int robotId) {
 		PacketSendUtility.sendPacket(player, new SM_RIDE_ROBOT(player, 0));
 		PacketSendUtility.sendPacket(player, new SM_RIDE_ROBOT(player, robotId));
+	}
+
+	private record ItemParam(String input, ItemTemplate itemTemplate) {
+
+		private Integer dyeColor() {
+			if (itemTemplate != null) {
+				if (itemTemplate.getActions() == null || itemTemplate.getActions().getDyeAction() == null)
+					return null;
+				return itemTemplate.getActions().getDyeAction().getColor();
+			}
+			String colorParam = input;
+			try {
+				// try to get color by name
+				return ((Color) Color.class.getField(colorParam.toUpperCase()).get(null)).getRGB();
+			} catch (Exception e) {
+				// try to get color by hex code
+				if (colorParam.length() <= 8) {
+					if (colorParam.startsWith("#"))
+						colorParam = colorParam.substring(1);
+					else if (colorParam.startsWith("0x") || colorParam.startsWith("0X"))
+						colorParam = colorParam.substring(2);
+				}
+				try {
+					return Integer.valueOf(colorParam, 16);
+				} catch (NumberFormatException _) {
+					return null;
+				}
+			}
+		}
 	}
 }
